--- a/manifest.json
+++ b/manifest.json
@@ -18,13 +18,5 @@
         "128": "images/128.png"
       }
     },
-    "permissions": ["scripting", "activeTab"],
-    "commands": {
-      "_execute_action": {
-        "suggested_key": {
-          "default": "Ctrl+B",
-          "mac": "Command+B"
-        }
-      }
-    }
+    "permissions": ["scripting", "activeTab"]
   }
